feat(Lyrics display): :sparkles: Add lyrics display & interactive features
The functional lyrics page is completed, the lyrics of the song and the translations (if available) will be displayed on the lyrics page, and can be automatically scrolled. By clicking on the lyrics, the user can adjust the play progress to the line's related time

--- a/src/components/lyrics/lyricsStyle.css
+++ b/src/components/lyrics/lyricsStyle.css
@@ -53,11 +53,6 @@
 
     align-items: center;
 }
-#lyricsContent {
-    width: calc(100% - 30rem);
-
-    justify-content: left;
-}
 
 /* 歌曲信息 */
 #songInfo {
@@ -216,10 +211,49 @@
 }
 
 /* 歌词 */
+#lyricsContent {
+    max-width: calc(100% - 30rem);
+    height: 100%;
+
+    justify-content: left;
+
+    padding-top: 25%;
+    padding-bottom: 25%;
+    padding-right: 3rem;
+
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+#lyricsContent::-webkit-scrollbar {
+    display: none;
+}
+
 .lyricsBox {
     max-width: 100%;
 
-    margin: 1rem 0;
+    padding: 1rem 0;
+    padding-right: 0.8rem;
+
+    background: transparent;
+    border: none;
+    border-radius: 15px;
+
+    transition: all 300ms ease-in-out;
+}
+.lyricsBox:hover {
+    background: var(--transparent-grey);
+}
+.lyricsBox > ul {
+    color: var(--transparent-darkgrey);
+
+    text-shadow: 0 0 2px var(--transparent-darkgrey);
+
+    transition: all 300ms ease-in-out;
+}
+.lyricsBox.focused > ul {
+    color: var(--default-white);
+
+    text-shadow: 0 0 3px var(--default-white);
 }
 .lyricsBox > ul {
     margin: 0;
