feat(AccountManager): :zap: Optimized account login progress
When there's no platform logged in, the appliation will ask the user to login by loading the Account Page on application startup

- The application icon is redesigned

--- a/src/components/lyrics/lyricsStyle.css
+++ b/src/components/lyrics/lyricsStyle.css
@@ -1,5 +1,5 @@
 #lyricsPanel {
-    height: 100vh;
+    height: 100%;
 
     background: linear-gradient(45deg, var(--color-blue-light), var(--color-green-light));
 
@@ -212,6 +212,7 @@
 
 /* 歌词 */
 #lyricsContent {
+    min-width: 30rem;
     max-width: calc(100% - 30rem);
     height: 100%;
 
