--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -224,7 +224,7 @@ a {
 #appMain {
     position: relative;
     width: 100%;
-    height: calc(100vh - 3rem);
+    height: calc(100vh - 2.5rem);
     top: 2.5rem;
 }
 
@@ -1381,7 +1381,7 @@ a {
 #lyricsArea {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 3rem);
     top: 0;
 
     transform: translateY(100%);
