--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -1413,6 +1413,8 @@ a {
 
     opacity: 0;
     transition: opacity 200ms ease-in-out;
+
+    display: none;
 }
 #rightClickMenuContainer.show {
     opacity: 1;
