--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -1385,7 +1385,7 @@ a {
     top: 0;
 
     transform: translateY(100%);
-    transition: all 500ms ease-in-out;
+    transition: transform 500ms ease-in-out;
 
     z-index: 1000;
 }
