feat: :bookmark: Update resources for new version: v1.1.8-Kyrios
Add release notes and change environment to the build environment

--- a/src/components/search/searchStyle.css
+++ b/src/components/search/searchStyle.css
@@ -6,7 +6,7 @@
     padding: 0 2rem;
 }
 #musicSearch > div {
-    margin: 1rem 0;
+    margin-top: 1rem;
 }
 
 /* 搜索框 */
@@ -120,5 +120,6 @@
 }
 
 #loadMoreButton {
-    margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
 }
