feat(Desktop Lyrics): :sparkles: Add the Desktop Lyrics widget
Add the desktop lyrics widget, which can control the music player without interacting with the main window

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -1079,6 +1079,11 @@ a {
     border-radius: 8px;
 }
 
+/* 桌面歌词开关 */
+#captions.active {
+    background: var(--color-blue-light);
+}
+
 #controlRightBar > * {
     margin: 0 3px;
 }
