feat(Desktop Lyrics): :sparkles: Add always on top features for the Desktop Lyrics Widget
The Desktop Lyrics Widget can be pinned to top when the always on top button is enabled

--- a/src/components/captions/captionsStyle.css
+++ b/src/components/captions/captionsStyle.css
@@ -47,6 +47,20 @@
     margin: 0 4px;
 }
 
+.verticleSplitLine {
+    width: 2px;
+    height: 100%;
+
+    background: var(--transparent-darkgrey);
+    border: none;
+    border-radius: 1px;
+
+    margin: 0 6px;
+    padding: 2px 0;
+
+    display: block;
+}
+
 .playControl:hover {
     background: var(--transparent-darkgrey);
 }
