--- a/src/components/songlist/songlistStyle.css
+++ b/src/components/songlist/songlistStyle.css
@@ -54,7 +54,7 @@
     transition: all 200ms ease-in-out;
 }
 .listButton:hover {
-    background: var(--color-blue-light);
+    background: var(--theme-color-light);
     transform: scale(1.1);
 }
 .listButton > img {
@@ -68,7 +68,7 @@
     transition: all 200ms ease-in-out;
 }
 .listButton:hover > label {
-    color: var(--color-blue-deep);
+    color: var(--theme-color-deep);
 }
 
 #songlistContent {
